--- a/style1.css
+++ b/style1.css
@@ -17,7 +17,7 @@
     		height: 					90vh;
     		border-radius: 				10px;
     	}
-    	.grid-container 
+    	.grid-container
 		{
 		  display: 						grid;
 		  grid-template-columns: 		auto auto auto auto auto;
@@ -27,7 +27,7 @@
 		  margin:               		1em auto;
 		}
 
-		.grid-item 
+		.grid-item
 		{
 		  background-color: 			rgba(255, 255, 255, 0.8);
 		  border: 						1px solid #ffffff;
@@ -73,7 +73,7 @@
 		.breadcrumb
 		{
 			padding-left: 				10%;
-			padding-top: 				2%;	
+			padding-top: 				2%;
 		}
 		.bottomGrayBar
 		{
@@ -100,8 +100,26 @@
 			height: 					10vh;
 			border-bottom:  			1px solid black;
 			padding: 					3%;
+			margin: 2em auto;
 		}
 		.options:hover
 		{
 			background-color: 			#f7f8ff;
+		}
+
+		.boxed label {
+		  display: inline-block;
+		  width: 40px;
+		  padding: 10px;
+		  border: solid 2px #ccc;
+		  transition: all 0.5s;
+			;
+		}
+
+		.boxed input[type="radio"] {
+		  display: none;
+		}
+
+		.boxed input[type="radio"]:checked + label {
+		  border: solid 2px green;
 		}
