--- a/style1.css
+++ b/style1.css
@@ -13,9 +13,11 @@
     	}
     	.questionList
     	{
+    		margin-top: 				-5%;
     		background-color: 			#edf3ff;
-    		height: 					90vh;
+    		height: 					92vh;
     		border-radius: 				10px;
+    		border:						2px solid #dbe7ff;
     	}
     	.grid-container
 		{
@@ -98,27 +100,36 @@
 		{
 			width: 						100%;
 			height: 					10vh;
-			border-bottom:  			1px solid black;
-			padding: 					3%;
+			margin: 					0.1em auto;
+			text-align: 				justify-all;
+			background-color: 			rgb(239, 240, 242,0.5);
+			padding-top:				1em;
+			padding-left: 				1em;
 		}
 		.options:hover
 		{
 			background-color: 			#f7f8ff;
+			cursor: 					pointer;
 		}
 
 		.boxed label {
-		  display: inline-block;
-		  width: 40px;
-		  padding: 10px;
-		  border: solid 2px #ccc;
-		  transition: all 0.5s;
-			;
+		  display: 						inline-block;
+		  width: 						40px;
+		  padding: 						10px;
+		  border: 						solid 2px #ccc;
+		  transition: 					all 0.5s;
+
 		}
 
 		.boxed input[type="radio"] {
-		  display: none;
+		  display: 						none;
 		}
 
-		.boxed input[type="radio"]:checked + label {
-		  border: solid 2px green;
+		.boxed input[type="radio"]:checked + label 
+		{
+		  border: 						solid 2px green;
+		}
+		.Question
+		{
+			margin-bottom: 				2em;
 		}
